# bazel-rules-bid

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  ensure_container.bzl  extensions.bzl  go.mod  multitool.lock.json
.bcr/: metadata.template.json
.github/workflows/: build.yml  publish.yml  tag-and-release.yml
integration/: BUILD.bazel  MODULE.bazel  genfile.bzl  runme.bash  test_resolve_gotopt2.bash  test_resolve_workspace.bash
