module(
    name = "rules_bid",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

bazel_dep(name = "bazel_lib", version = "3.3.1", dev_dependency = True)

bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "fshlib", version = "0.2.6")
bazel_dep(name = "gotopt2", version = "2.5.1")
bazel_dep(name = "gazelle", version = "0.51.0")

bazel_dep(name = "protobuf", version = "34.1", dev_dependency = True)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

multitool = use_extension(
    "@rules_multitool//multitool:extension.bzl",
    "multitool",
)
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")
