load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":genfile.bzl", "genfile")

sh_binary(
    name = "runme",
    srcs = [
        "runme.bash",
    ],
)

sh_test(
    name = "test",
    srcs = [
        "test.bash",
    ],
)

genfile(
    name = "generate",
)

sh_test(
    name = "test_resolve_gotopt2",
    srcs = [
        "test_resolve_gotopt2.bash",
    ],
    data = [
        "@rules_bid//build:resolve",
    ],
)

sh_test(
    name = "test_resolve_workspace",
    srcs = [
        "test_resolve_workspace.bash",
    ],
    data = [
        "@rules_bid//build:resolve",
        "//:MODULE.bazel",
    ],
)
