module(
    name = "integration",
    version = "0.0.0",
)


bazel_dep(name = "rules_shell", version = "0.6.1")


bazel_dep(name = "bazel_rules_bid", version = "0.0.0")
local_path_override(
    module_name = "bazel_rules_bid",
    path = "../",
)



ensure_container = use_repo_rule("@bazel_rules_bid//:ensure_container.bzl", "ensure_container")
ensure_container(
    name = "local_image_check",
    image = "my-image:latest",
    uri = "magnet:?xt=urn:btih:f2abc8a61ac867192fceae602366fe6eaf5cda47&dn=tremc",
)
